# wasm-bench

./: README.md  bench.js  build.sh  deno.json  test.js
as-shift/: countup.d.ts  countup.ts  countup.wasm
as-wrap/: countup.ts  countup.wasm
c/: countup.js  countup.wasm
c-simple/: countup.c  countup.wasm
c-struct/: countup.c  countup.js  countup.wasm  util.js
countColors/: bench.js  build.sh  details.md  firstRun.js  size.js  test.js
countColors/as-dataview/: countup.ts  countup.wasm
countColors/as-wrap/: countup.js
countColors/c-simple/: countup.js  countup.wasm
countColors/c-struct/: countup.js  countup.wasm  util.js
countColors/cpp-class/: countup.cpp  countup.js  countup.wasm
countColors/cpp-simple/: countup.js  countup.wasm
countColors/go/: build.sh  countup-conservative.wasm  countup-leaking.wasm  countup-precise.wasm  countup.go  countup.wasm
countColors/go-class/: countup-conservative.wasm  countup-leaking.wasm  countup-precise.wasm  countup.go
countColors/go-simple/: countup-conservative.wasm  countup-leaking.wasm  countup-precise.wasm
countColors/js/: countup.js
countColors/rust/: Cargo.toml
countColors/rust-uint32/: Cargo.toml
cpp/: countup.cpp  countup.wasm
cpp-class/: countup.wasm
getColors/: bench.js  build.sh  details.md  firstRun.js  test.js
getColors/as-class/: color.d.ts  color.js  color.ts  color.wasm
getColors/as-number/: color.js  color.ts  color.wasm
getColors/rust-simple/: Cargo.toml
getColors/rust-simple/src/: lib.rs
initColors/: bench.js  build.sh  details.md  firstRun.js  test.js
(+19 files in other folders)
