[package]
name = "color"
version = "0.0.1"
authors = ["marmooo"]
description = "A sample project with wasm-pack"
repository = "https://github.com/marmooo/wasm-bench"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
